{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 47,
  "lineage": "26937e92-6257-96b7-4fb6-88edc3ea7934",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "new_rhel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d03b1ad793d7ac93",
            "arn": "arn:aws:ec2:us-east-2:987617765642:instance/i-08b9c77dd42424896",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b9c77dd42424896",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ted-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03ee7e3c98fc6c44f",
            "private_dns": "ip-10-0-1-33.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.33",
            "public_ip": "3.145.69.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09a55c374e3b9225d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04fadaa981cd0a1aa"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05533b730af8d788f",
            "tags": {
              "Name": "ted-test"
            },
            "tags_all": {
              "Name": "ted-test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04fadaa981cd0a1aa"
            ]
          },
          "dependencies": [
            "aws_security_group.prod_allow",
            "aws_subnet.prod-subnet-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "new_rhelb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d03b1ad793d7ac93",
            "arn": "arn:aws:ec2:us-east-2:987617765642:instance/i-0b6ab45e5701a7c50",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6ab45e5701a7c50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ted-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05d40c5e2e56de8bd",
            "private_dns": "ip-10-0-2-56.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.56",
            "public_ip": "3.23.111.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-069717a5131f3b54c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04fadaa981cd0a1aa"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02473d83197987c7b",
            "tags": {
              "Name": "ted-test"
            },
            "tags_all": {
              "Name": "ted-test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04fadaa981cd0a1aa"
            ]
          },
          "dependencies": [
            "aws_security_group.prod_allow",
            "aws_subnet.prod-subnet-publicb",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987617765642:internet-gateway/igw-0de0afce836be6ee3",
            "id": "igw-0de0afce836be6ee3",
            "owner_id": "987617765642",
            "tags": {
              "Name": "ted-test"
            },
            "tags_all": {
              "Name": "ted-test"
            },
            "vpc_id": "vpc-0a2cef26ee9c79a1a"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:987617765642:loadbalancer/app/test-lb-tf/49aee0a5057e1f47",
            "arn_suffix": "app/test-lb-tf/49aee0a5057e1f47",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-407339655.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:987617765642:loadbalancer/app/test-lb-tf/49aee0a5057e1f47",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04fadaa981cd0a1aa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02473d83197987c7b"
              },
              {
                "subnet_id": "subnet-05533b730af8d788f"
              }
            ],
            "subnets": [
              "subnet-02473d83197987c7b",
              "subnet-05533b730af8d788f"
            ],
            "tags": {
              "Environment": "ted-production"
            },
            "tags_all": {
              "Environment": "ted-production"
            },
            "vpc_id": "vpc-0a2cef26ee9c79a1a",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.prod_allow",
            "aws_subnet.prod-subnet-public",
            "aws_subnet.prod-subnet-publicb",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987617765642:route-table/rtb-00dac503f31a106ce",
            "id": "rtb-00dac503f31a106ce",
            "owner_id": "987617765642",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de0afce836be6ee3",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de0afce836be6ee3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ted-test"
            },
            "tags_all": {
              "Name": "ted-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2cef26ee9c79a1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e11e89ddb598cfe",
            "route_table_id": "rtb-00dac503f31a106ce",
            "subnet_id": "subnet-05533b730af8d788f"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-route-table",
            "aws_subnet.prod-subnet-public",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987617765642:security-group/sg-04fadaa981cd0a1aa",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fadaa981cd0a1aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "new-web-traffic",
            "name_prefix": "",
            "owner_id": "987617765642",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "new_web_traffic"
            },
            "tags_all": {
              "Name": "new_web_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2cef26ee9c79a1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987617765642:subnet/subnet-05533b730af8d788f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05533b730af8d788f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987617765642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ted-subnet"
            },
            "tags_all": {
              "Name": "ted-subnet"
            },
            "vpc_id": "vpc-0a2cef26ee9c79a1a"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-publicb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987617765642:subnet/subnet-02473d83197987c7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02473d83197987c7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987617765642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ted-subnetb"
            },
            "tags_all": {
              "Name": "ted-subnetb"
            },
            "vpc_id": "vpc-0a2cef26ee9c79a1a"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:987617765642:vpc/vpc-0a2cef26ee9c79a1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac4c63a57024d7fc",
            "default_route_table_id": "rtb-0bd9c6768b865a764",
            "default_security_group_id": "sg-0138dde1db386649e",
            "dhcp_options_id": "dopt-0c962ea887849409f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a2cef26ee9c79a1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd9c6768b865a764",
            "owner_id": "987617765642",
            "tags": {
              "Name": "ted-test"
            },
            "tags_all": {
              "Name": "ted-test"
            }
          }
        }
      ]
    }
  ]
}